--- a/ClientApp/src/custom.css
+++ b/ClientApp/src/custom.css
@@ -1,14 +1,15 @@
 /* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
+a, a:visited, a:hover, a:active {
+    color: #00866e;
 }
 
 code {
-  color: #E01A76;
+    color: #E01A76;
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
+
